--- a/dockercon.yml
+++ b/dockercon.yml
@@ -7,7 +7,7 @@
        command: 'aws ecr get-login --no-include-email'
        
     -  name: pull images
-       command: 'docker pull 587589636093.dkr.ecr.us-east-1.amazonaws.com/nginx:1'     
+       command: 'docker pull 587589636093.dkr.ecr.us-east-1.amazonaws.com/myng:1'     
                             
     -  name: start docker container
-       command: 'docker run --name myng14 -itd -p 80:80 587589636093.dkr.ecr.us-east-1.amazonaws.com/nginx:1'
+       command: 'docker run --name myng14 -itd -p 80:80 587589636093.dkr.ecr.us-east-1.amazonaws.com/myng:1'
